Include`get` in the install.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "description": "ERROR: No README.md file found!",
   "dependencies": {
     "cheerio": "~0.10.1",
+    "get": "~1.2.1",
     "underscore": "~1.4.1",
     "request": "~2.11.4",
     "underscore.string": "~2.3.0"
